<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".registerDemo2"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="0dp"
    android:paddingBottom="18dp"
    android:background="@drawable/student_page_bacground_gradient1"
    >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/user2"
                />
            <EditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/enter_your_name"
                android:textColorHint="#fff"
                android:maxLines="1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/enter_your_email"
                android:textColorHint="#fff"
                android:maxLines="1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />

            <EditText
                android:id="@+id/etphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/enter_your_phone_number"
                android:textColorHint="#fff"
                android:maxLines="1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/enter_password_at_least_6_digits"
                android:textColorHint="#fff"
                android:maxLines="1"
                android:layout_marginTop="4dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />


            <EditText
                android:id="@+id/et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/repeat_password"
                android:textColorHint="#fff"
                android:maxLines="1"
                android:layout_marginTop="4dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />




            <Button
                android:id="@+id/btregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="30dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:background="@drawable/register_button_background_gray"
                />


            <Button
                android:id="@+id/btregister2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_register_log_in"
                android:textAllCaps="false"
                android:textColor="#9d0ec7"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="20dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:background="@drawable/login_button_background_white"
                />

        </LinearLayout>


    </ScrollView>



</LinearLayout>