<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".adminPanel_discussionUpload_activity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/adminPanel_discussionUpload_et_title"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/adminPanel_discussionUpload_editText_title"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />


            <EditText
                android:id="@+id/adminPanel_discussionUpload_et_discussion"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/adminPanel_discussionUpload_editText_discussion"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="8dp"
                android:textColorHint="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />


            <Button
                android:id="@+id/discussionUpload_button_add"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/register_button_background_blue"
                android:padding="16dp"
                android:text="@string/button_feedback_add"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <ListView
                android:id="@+id/ListView_discussionUpload_ID"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp">

            </ListView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>